2008-01-06  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* ext/gio/gstgiobasesrc.c: (gst_gio_base_src_get_size):
	* tests/check/pipelines/gio.c: (free_input), (GST_START_TEST):
	Update to GMemoryInputStream API changes in GLib SVN and require
	gio-2.0 >= 2.15.1 for this. Fixes bug #507584.
	We can also report the duration for every GSeekable, not only
	GFileInputStream and GMemoryInputStream.

2008-01-05  David Schleef  <ds@schleef.org>

	* sys/glsink/glimagesink.c:
	* sys/glsink/glimagesink.h:
	* sys/glsink/gstglbuffer.h:
	* sys/glsink/gstgldisplay.c:
	* sys/glsink/gstgldisplay.h:
	* sys/glsink/gstglupload.c:
	  Handle xoverlay exposes correctly.  This means glimagesink works
	  correctly most of the time in totem (fullscreening being an
	  execption).  Doesn't handle expose events directly to the GL
	  window.

2008-01-05  David Schleef  <ds@schleef.org>

	* sys/glsink/glextensions.c:
	* sys/glsink/glextensions.h:
	* sys/glsink/glimagesink.c:
	* sys/glsink/glimagesink.h:
	* sys/glsink/gstgldisplay.c:
	* sys/glsink/gstgldisplay.h:
	* sys/glsink/gstopengl.c:
	  Reenable video/x-raw-rgb and x-raw-yuv for glimagesink.  Enable
	  vblank synchronization.  Remove unused code.

2008-01-04  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_rtp_jitter_buffer_loop):
	Don't unref the popped buffer when we don't have ownership.
	Fixes #507020.

2008-01-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/Makefile.am:
	* gst/mpegtsparse/flutspatinfo.c:
	* gst/mpegtsparse/flutspatinfo.h:
	* gst/mpegtsparse/flutspmtinfo.c:
	* gst/mpegtsparse/flutspmtinfo.h:
	* gst/mpegtsparse/flutspmtstreaminfo.c:
	* gst/mpegtsparse/flutspmtstreaminfo.h:
	Remove no longer needed files.

2008-01-02  David Schleef  <ds@schleef.org>

	* tests/check/Makefile.am:
	  Disable vcdsrc in states test because it takes too much time
	  to get to PLAYING if it can find a device.

2007-12-31  David Schleef  <ds@schleef.org>
